header dinamico com json

--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
     <main class="main">
         <header class="header">
         
-            <picture class="photo"><img src="assets/img/eu.jpg" alt="Foto do Pedro H Santos"></picture>
-            <h1 class="title">Olá,<br> eu sou o Pedro H Santos</h1>
+            <picture class="photo" id="profile.photo"><img src="assets/img/eu.jpg" alt="Foto do Pedro H Santos"></picture>
+            <h1 class="title">Olá,<br> eu sou <span id="profile.name">Loading...</span></h1>
     
             <div class="information">
-                <p class="job">Desenvolvedor Jr</p>
-                <p class="position">Minas Gerais - BR</p>
+                <p class="job" id="profile.job">Loading...</p>
+                <p class="position" id="profile.location">Loading...</p>
                 <p class="contact">
-                    <a href="tel:(31) 9 7555-4281">(31) 9 7555-4281</a>
+                    <a id="profile.phone" href="tel:(31) 9 7555-4281">Loading...</a>
                 </p>
                 <p class="mail">
-                    <a href="mailto:ppphsantos@gmail.com">ppphsantos@gmail.com</a>
+                    <a id="profile.email" href="mailto:ppphsantos@gmail.com">Loading...</a>
                 </p>
             </div>
         </header>
