Softskills dinamico com json

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
     
                     <section class="personal">
                         <h3>Pessoal:</h3>
-                        <ul>
+                        <ul id="profile.skills.softSkills">
                             <li>Liderança</li>
                             <li>Boa Comunicação</li>
                             <li>Organização</li>
