--- a/index.html
+++ b/index.html
@@ -128,12 +128,12 @@
                     <section class="personal">
                         <h3>Pessoal:</h3>
                         <ul id="profile.skills.softSkills">
-                            <li>Liderança</li>
-                            <li>Boa Comunicação</li>
-                            <li>Organização</li>
-                            <li>Trabalho em equipe</li>
-                            <li>Flexibilidade</li>
-                            <li>Inteligência emocional</li>
+                            <li>Loading...</li>
+                            <li>Loading...</li>
+                            <li>Loading...</li>
+                            <li>Loading...</li>
+                            <li>Loading...</li>
+                            <li>Loading...</li>
                         </ul>
                     </section>
                 </div>
