Hardskills dinamico com json

--- a/index.html
+++ b/index.html
@@ -94,34 +94,8 @@
                 <div class="skills">
                     <section class="tools">
                         <h3>Tecnologias:</h3>
-                        <ul>
-                            <li>
-                                <img src="assets/svg/html.svg" alt="Linguagem HTML">
-                            </li>
-                            <li>
-                                <img src="assets/svg/css.svg" alt="Linguagem CSS">
-                            </li>
-                            <li>
-                                <img src="assets/svg/jvs.svg" alt="Linguagem NodeJs">
-                            </li>
-                            <li>
-                                <img src="assets/svg/js.svg" alt="Linguagem JavaScript">
-                            </li>
-                            <li>
-                                <img src="assets/svg/dotnet.svg" alt="Linguagem DotNet">
-                            </li>
-                            <li>
-                                <img src="assets/svg/python.svg" alt="Linguagem Python">
-                            </li>
-                            <li>
-                                <img src="assets/svg/php.svg" alt="Linguagem PHP">
-                            </li>
-                            <li>
-                                <img src="assets/svg/mysql.svg" alt="Linguagem MySql">
-                            </li>
-                            <li>
-                                <img src="assets/svg/githubb.svg" alt="Linguagem Git">
-                            </li>
+                        <ul id="profile.skills.hardSkills">
+                            Loading...
                         </ul>
                     </section>
     
