--- a/index.html
+++ b/index.html
@@ -38,11 +38,8 @@
                 <h2>Idiomas</h2>
             </button>
             <div class="content">
-                <ul class="languages">
-                    <li>Português</li>
-                    <li>Ingles</li>
-                    <li>Italiano</li>
-                    <li>Espanhol</li>
+                <ul class="languages" id="profile.languages">
+                    <li>Loading...</li>
                 </ul>
             </div>
         </section>
