--- a/index.html
+++ b/index.html
@@ -62,14 +62,8 @@
                 <h2>Experiência Profissional</h2>
             </button>
             <div class="content">
-                <ul class="experience">
-                    <li>
-                        <h3 class="title">Network Operation Center</h3>
-                        <p class="period">Maio 2022 - Current</p>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut, labore reprehenderit dolore alias libero,
-                         cupiditate temporibus quae placeat mollitia atque impedit dolorem vitae facilis, earum unde nobis minima tempora sequi?</p>
-                    </li>
-                    </li>
+                <ul class="experience" id="profile.professionalExperience">
+                    Loading...
                 </ul>
             </div>
         </section>
