--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/css/portfolio.css">
     <link rel="stylesheet" href="assets/css/experience.css">
     <link rel="stylesheet" href="assets/css/skills.css">
+    <link rel="stylesheet" href="assets/css/footer.css">
 </head>
 <body>
     <main class="main">
@@ -95,6 +96,12 @@
                 </div>
             </div>
         </section>
+
+        <footer>
+            <a href="https://web.dio.me/users/ppphsantos/?tab=skills" target="_blank">
+                <img src="assets/svg/DIO.svg" alt="Logo DIO">
+            </a>
+        </footer>
     </main>
 
     <script src="assets/js/acordeon.js"></script>
